--- a/index.html
+++ b/index.html
@@ -306,6 +306,14 @@ https://example.com/another-post" rows="6"></textarea>
             </div>
 
             <div id="profile-content" class="profile-content hidden">
+                <!-- Similar Authors -->
+                <div id="similar-authors" class="similar-authors hidden">
+                    <div class="similar-authors-header">
+                        <span class="similar-authors-label">You Write Like</span>
+                    </div>
+                    <div id="similar-authors-content" class="similar-authors-content"></div>
+                </div>
+
                 <!-- Profile Quality Metric -->
                 <div id="profile-quality" class="profile-quality">
                     <div class="quality-header">
