--- a/index.html
+++ b/index.html
@@ -895,6 +895,37 @@ sudo systemctl restart ollama</pre>
         </div>
     </div>
 
+    <!-- Mixed Content Modal (HTTPS + Ollama) -->
+    <div id="mixed-content-modal" class="modal-overlay hidden">
+        <div class="modal">
+            <div class="modal-header">
+                <h3>Ollama Blocked by Browser Security</h3>
+                <button id="btn-close-mixed-content" class="btn-modal-close">&times;</button>
+            </div>
+            <div class="modal-body">
+                <p>You're using Ollama on an <strong>HTTPS page</strong> (github.io), but Ollama runs on <strong>HTTP</strong> (localhost). Browsers block this "mixed content" for security.</p>
+
+                <p style="margin-top: 16px;"><strong>Two solutions:</strong></p>
+
+                <div style="background: #f0f7f0; border: 1px solid #c8e6c9; border-radius: 6px; padding: 12px; margin: 12px 0;">
+                    <p style="margin: 0;"><strong>Option 1: Use Puter (Recommended)</strong></p>
+                    <p style="margin: 8px 0 0 0; font-size: 13px; color: #555;">Free cloud API, no setup required. Works instantly.</p>
+                    <button id="btn-switch-puter-mixed" class="btn-primary" style="margin-top: 12px;">Switch to Puter</button>
+                </div>
+
+                <div style="background: #f5f5f5; border: 1px solid #ddd; border-radius: 6px; padding: 12px; margin: 12px 0;">
+                    <p style="margin: 0;"><strong>Option 2: Run Write Like Me Locally</strong></p>
+                    <p style="margin: 8px 0 0 0; font-size: 13px; color: #555;">Clone the repo and serve it over HTTP:</p>
+                    <pre class="terminal-block" style="margin-top: 8px;">git clone https://github.com/97115104/writelikeme.git
+cd writelikeme
+python3 -m http.server 8000
+# Open http://localhost:8000</pre>
+                    <p style="margin: 8px 0 0 0; font-size: 12px; color: #888;">Then Ollama will work because both are HTTP.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Analysis Error Modal -->
     <div id="analysis-error-modal" class="modal-overlay hidden">
         <div class="modal modal-small">
