--- a/index.html
+++ b/index.html
@@ -903,24 +903,26 @@ sudo systemctl restart ollama</pre>
                 <button id="btn-close-mixed-content" class="btn-modal-close">&times;</button>
             </div>
             <div class="modal-body">
-                <p>You're using Ollama on an <strong>HTTPS page</strong> (github.io), but Ollama runs on <strong>HTTP</strong> (localhost). Browsers block this "mixed content" for security.</p>
+                <p>Your browser (Safari/Firefox) blocks HTTPS pages from accessing local Ollama (HTTP). <strong>Chrome allows this</strong>, so you have three options:</p>
 
-                <p style="margin-top: 16px;"><strong>Two solutions:</strong></p>
+                <div style="background: #e3f2fd; border: 1px solid #90caf9; border-radius: 6px; padding: 12px; margin: 12px 0;">
+                    <p style="margin: 0;"><strong>Option 1: Use Chrome</strong></p>
+                    <p style="margin: 8px 0 0 0; font-size: 13px; color: #555;">Open this page in Google Chrome. Ollama will work from HTTPS.</p>
+                </div>
 
                 <div style="background: #f0f7f0; border: 1px solid #c8e6c9; border-radius: 6px; padding: 12px; margin: 12px 0;">
-                    <p style="margin: 0;"><strong>Option 1: Use Puter (Recommended)</strong></p>
-                    <p style="margin: 8px 0 0 0; font-size: 13px; color: #555;">Free cloud API, no setup required. Works instantly.</p>
+                    <p style="margin: 0;"><strong>Option 2: Use Puter</strong></p>
+                    <p style="margin: 8px 0 0 0; font-size: 13px; color: #555;">Free cloud API, no setup required. Works in any browser.</p>
                     <button id="btn-switch-puter-mixed" class="btn-primary" style="margin-top: 12px;">Switch to Puter</button>
                 </div>
 
                 <div style="background: #f5f5f5; border: 1px solid #ddd; border-radius: 6px; padding: 12px; margin: 12px 0;">
-                    <p style="margin: 0;"><strong>Option 2: Run Write Like Me Locally</strong></p>
+                    <p style="margin: 0;"><strong>Option 3: Run Write Like Me Locally</strong></p>
                     <p style="margin: 8px 0 0 0; font-size: 13px; color: #555;">Clone the repo and serve it over HTTP:</p>
                     <pre class="terminal-block" style="margin-top: 8px;">git clone https://github.com/97115104/writelikeme.git
 cd writelikeme
 python3 -m http.server 8000
 # Open http://localhost:8000</pre>
-                    <p style="margin: 8px 0 0 0; font-size: 12px; color: #888;">Then Ollama will work because both are HTTP.</p>
                 </div>
             </div>
         </div>
