update the placeholder text for prompt

--- a/index.html
+++ b/index.html
@@ -456,11 +456,7 @@ https://example.com/another-post" rows="6"></textarea>
 
             <div class="form-group">
                 <label for="prompt-input">What should I write about?</label>
-                <textarea id="prompt-input" placeholder="Example: Write a social media post about my new blog article: https://example.com/article
-
-Or: Write a paragraph introducing my thoughts on remote work culture
-
-Be specific about what you want — the tool will handle styling it in your voice." rows="4"></textarea>
+                <textarea id="prompt-input" placeholder="Example: Write a social media post about my new blog article: https://example.com/article" rows="4"></textarea>
             </div>
 
             <!-- URL Artifacts Section -->
